--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ section {
         </div> <br><br>
         <h3 class="duzenle1"> Profil Fotoğrafım</h3><br>
         <div class="profil-foto-frame" style="display: inline-block; border: 4px solid #fff; border-radius: 50%; padding: 5px; overflow: hidden;">
-            <img src=".kendim.jpg" alt="profilresmi" width="200" style="border-radius: 50%;">
+            <img src="./img/kendim.jpg" alt="profilresmi" width="200" style="border-radius: 50%;">
         </div>
        
     </section>
